--- a/Labs/Week01_ExploringData_Lab.Rmd
+++ b/Labs/Week01_ExploringData_Lab.Rmd
@@ -335,9 +335,9 @@ quiz(caption = 'Test Your Understanding',
               answer("False"),
               message = 'The nonbinary group is much smaller than the other two measured groups.'),
      question_numeric("How many total datapoints do you have for the gender variable?",
-              answer(48, correct=T)),
+              answer(45, correct=T)),
      question_numeric("What percentage of participants are female?",
-              answer(41.7, correct=T)),
+              answer(42.2, correct=T)),
      question_numeric('How many nonbinary participants are in your sample?',
               answer(2, correct=T)))
 ```
@@ -481,7 +481,7 @@ quiz(caption = 'Test Your Understanding',
               answer('Mode', correct = T),
               message = 'All of the above could technically be used to describe the Age variable. However, it is most common to use the
               mean, as it includes information from each observation.'),
-     question("Which of the following central tendency measures could be used to describe gender? Please select all that apply.",
+     question("Which of the following central tendency measures could be used to describe gender?",
               answer("Mean"),
               answer("Median"),
               answer('Mode', correct = T),
@@ -691,7 +691,7 @@ quiz(caption = 'Test Your Understanding',
               answer('Pearson Correlation'),
               random_answer_order = T,
               message = 'The Shapiro-Wilk test is appropriate for use with smaller datasets (n < 50), while the Kolmogorov-Smirnov test should be used with datasets of 50 observations or more. t-Tests and Pearson correlations are not used to measure normality in data.'),
-     question('Do any of the assessments violate normality, according to the statistical test you selected? Please select all that apply.',
+     question('Do any of the assessments violate normality, according to the statistical test you selected?',
               answer('Assessment A'),
               answer('Assessment B', correct=T),
               answer('Assessment C'),
